stlyes: mockup styles with angular materal and tailwindcss

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,19 +1,47 @@
-<mat-drawer-container class="flex h-screen">
-  <mat-drawer #drawer class="w-64 bg-gray-800 text-white" mode="side" opened="true">
-    <p class="p-4">Auto-resizing sidenav</p>
-    <div *ngIf="showFiller" class="p-4">
-      <p>Lorem, ipsum dolor sit amet consectetur.</p>
+<mat-drawer-container class="flex h-screen bg-black">
+  <mat-drawer
+    #drawer
+    class="w-64 bg-black text-white"
+    mode="side"
+    opened="true"
+  >
+    <!-- Encabezado del Sidebar -->
+    <div class="bg-black p-4 flex justify-between items-center">
+      <!-- Título -->
+      <span class="font-bold text-lg">Sequence Music</span>
     </div>
-    <button (click)="showFiller = !showFiller" mat-raised-button class="m-4">
-      Toggle extra text
-    </button>
+
+    <!-- Lista de Navegación -->
+    <nav class="mt-2">
+      <a
+        routerLink="/browse"
+        class="flex items-center px-4 py-2 hover:bg-gray-900"
+      >
+        Canciones
+        <mat-icon class="text-green-600 mr-2">arrow_forward_ios</mat-icon>
+      </a>
+      <a
+        routerLink="/search"
+        class="flex items-center px-4 py-2 hover:bg-gray-900"
+      >
+        Artistas
+        <mat-icon class="text-green-600 mr-2">arrow_forward_ios</mat-icon>
+      </a>
+      <a
+        routerLink="/library"
+        class="flex items-center px-4 py-2 hover:bg-gray-900"
+      >
+        Compañías discográficas
+        <mat-icon class="text-green-600 mr-2">arrow_forward_ios</mat-icon>
+      </a>
+      <!-- ... más elementos ... -->
+    </nav>
   </mat-drawer>
 
-  <div class="flex-1 p-4">
-    <button type="button" mat-icon-button (click)="drawer.toggle()" class="md:hidden">
-      <mat-icon>menu</mat-icon>
+  <div class="flex-1 p-4 text-white ml-2">
+    <button type="button" mat-icon-button (click)="drawer.toggle()">
+      <mat-icon *ngIf="!drawer.opened">menu</mat-icon>
+      <mat-icon *ngIf="drawer.opened">close</mat-icon>
     </button>
-    <p>Main content here</p>
   </div>
 </mat-drawer-container>
-<h2>hola</h2>
