--- a/src/app/songs/pages/form-page/form-page.component.html
+++ b/src/app/songs/pages/form-page/form-page.component.html
@@ -1,1 +1,120 @@
-<p>song-form works!</p>
+<div class="flex justify-between items-center mb-6">
+  <h3 class="text-headline text-white font-light">Añadiendo nueva canción</h3>
+  <button
+    class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
+    (click)="return()"
+  >
+    Cancelar
+  </button>
+</div>
+<div class="flex flex-col p-4 bg-background">
+  <!-- Formulario -->
+  <form class="space-y-4" [formGroup]="form" (ngSubmit)="onSubmit()">
+    <!-- Título -->
+    <div>
+      <label for="title" class="block text-sm font-medium text-gray-700"
+        >Título</label
+      >
+      <input
+        type="text"
+        id="title"
+        name="title"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+        placeholder="Indique el título de la canción"
+      />
+    </div>
+
+    <!-- Artistas -->
+    <div>
+      <label for="artist" class="block text-sm font-medium text-gray-700">Artista</label>
+      <select formControlName="artist" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
+        <option *ngFor="let artist of artists$ | async" [value]="artist.id">{{ artist.name }}</option>
+      </select>
+    </div>
+
+    <!-- Género -->
+    <div>
+      <label for="genre" class="block text-sm font-medium text-gray-700"
+        >Género</label
+      >
+      <!-- Tags de género aquí -->
+      <div class="flex flex-wrap gap-2 mt-2">
+        <!-- Ejemplo de tag de género -->
+        <span
+          class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center"
+          >Pop <button type="button" class="ml-2 text-white">✕</button></span
+        >
+        <span
+          class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center"
+          >Classic
+          <button type="button" class="ml-2 text-white">✕</button></span
+        >
+        <!-- Input para nuevo género -->
+        <input
+          type="text"
+          id="genre"
+          name="genre"
+          class="mt-1 block rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+          placeholder="Añade un género"
+        />
+      </div>
+    </div>
+
+    <!-- Compañía discográfica -->
+    <div>
+      <label for="company" class="block text-sm font-medium text-gray-700">Compañía Discográfica</label>
+      <select formControlName="company" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
+        <option *ngFor="let company of companies$ | async" [value]="company.id">{{ company.name }}</option>
+      </select>
+    </div>
+
+    <!-- País -->
+    <div>
+      <label for="country" class="block text-sm font-medium text-gray-700"
+        >País</label
+      >
+      <select
+        id="country"
+        name="country"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+      >
+        <!-- Opciones de países aquí -->
+      </select>
+    </div>
+
+    <!-- Año -->
+    <div>
+      <label for="year" class="block text-sm font-medium text-gray-700"
+        >Año</label
+      >
+      <input
+        type="number"
+        id="year"
+        name="year"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+        placeholder="Indique el año"
+      />
+    </div>
+
+    <!-- Puntuación -->
+    <div>
+      <label for="rating" class="block text-sm font-medium text-gray-700"
+        >Puntuación</label
+      >
+      <input
+        type="number"
+        id="rating"
+        name="rating"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+        placeholder="Indique la puntuación"
+      />
+    </div>
+
+    <!-- Botón de envío -->
+    <div class="flex justify-end">
+      <button type="submit" class="py-2 px-4 bg-primary text-white rounded-full shadow-lg hover:bg-primary-dark">
+        Guardar
+      </button>
+    </div>
+  </form>
+</div>
