--- a/src/app/songs/pages/form-page/form-page.component.html
+++ b/src/app/songs/pages/form-page/form-page.component.html
@@ -32,32 +32,17 @@
       </select>
     </div>
 
-    <!-- Género -->
     <div>
-      <label for="genre" class="block text-sm font-medium text-gray-700"
-        >Género</label
-      >
-      <!-- Tags de género aquí -->
+      <label class="block text-sm font-medium text-gray-700">Género</label>
       <div class="flex flex-wrap gap-2 mt-2">
-        <!-- Ejemplo de tag de género -->
-        <span
-          class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center"
-          >Pop <button type="button" class="ml-2 text-white">✕</button></span
-        >
-        <span
-          class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center"
-          >Classic
-          <button type="button" class="ml-2 text-white">✕</button></span
-        >
-        <!-- Input para nuevo género -->
-        <input
-          type="text"
-          id="genre"
-          name="genre"
-          class="mt-1 block rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
-          placeholder="Añade un género"
-        />
+        <ng-container *ngFor="let genreControl of genres.controls; let i = index">
+          <span class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center">
+            {{ genreControl.value }}
+            <button type="button" class="ml-2 text-white" (click)="removeGenre(i)">✕</button>
+          </span>
+        </ng-container>
       </div>
+      <input type="text" (keydown.enter)="addGenre($event)" placeholder="Añade un género" class="mt-1 block rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
     </div>
 
     <!-- Compañía discográfica -->
@@ -70,14 +55,8 @@
 
     <!-- País -->
     <div>
-      <label for="country" class="block text-sm font-medium text-gray-700"
-        >País</label
-      >
-      <select
-        id="country"
-        name="country"
-        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
-      >
+      <label for="country" class="block text-sm font-medium text-gray-700">País</label>
+      <select formControlName="country" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
         <!-- Opciones de países aquí -->
       </select>
     </div>
