refactor: Amplia reestructuración de stores y formularios para soporte multiartista
- Modifica el modelo de datos de las canciones para admitir varios artistas.
- Actualiza el formulario de canciones para seleccionar múltiples artistas.
- Implementa lógica para manejar un array de IDs de artistas en el backend.
- Ajusta las llamadas y el manejo de datos en el frontend para sincronizar con los cambios en el backend.
- Añade un campo opcional para URL de imagen con imagen predeterminada en caso de no proporcionar una.
- Implementa lógica para cerrar automáticamente el desplegable de géneros al seleccionar uno.
- Asegura que todos los campos sean obligatorios para activar el botón de envío del formulario.
- Refactoriza el diseño de selección de géneros y compañías para mejorar la usabilidad y el estilo.
- Realiza pruebas exhaustivas para garantizar la funcionalidad y estabilidad de los cambios.

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full bg-[#121212] shadow-creative p-2">
+<div class="flex flex-col h-full bg-dark shadow-creative p-2">
   <!-- Título y botón de cerrar -->
   <div class="flex items-center justify-between p-4 border-b border-gray-700">
     <h3 class="text-xl text-white font-bold">Menu</h3>
@@ -10,7 +10,7 @@
   </div>
 
   <!-- Navegación -->
-  <nav class="flex-grow mt-2">
+  <nav class="flex-grow mt-4">
     <ul class="space-y-2">
       <!-- Links de navegación -->
       <li>
