--- a/src/app/shared/layout-page/layout-page.component.html
+++ b/src/app/shared/layout-page/layout-page.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col min-h-screen bg-dark ">
+<div class="flex flex-col min-h-screen bg-background">
   <!-- Cabecera -->
-  <div class="flex items-center justify-between p-4 lg:px-16 bg-dark border-b-2 border-white">
+  <div class="flex items-center justify-between p-4 bg-dark lg:px-16 border-b-2 border-dark">
     <div class="flex items-center ">
       <button class="text-white mr-3" (click)="toggleSidebar()">
         <svg class="h-10 w-10" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -19,7 +19,7 @@
   </div>
 
   <!-- Contenido principal -->
-  <div class="flex-1 p-4 md:px-8 lg:px-16 bg-">
+  <div class="flex-1 p-4 md:px-8 lg:px-16">
     <router-outlet></router-outlet>
   </div>
 </div>
