--- a/src/app/songs/pages/form-page/form-page.component.html
+++ b/src/app/songs/pages/form-page/form-page.component.html
@@ -1,98 +1,225 @@
-<div class="flex justify-between items-center mb-6">
-  <h3 class="text-headline text-white font-light">Añadiendo nueva canción</h3>
+<div class="flex justify-between items-center pl-4 pr-4">
+  <h3 class="text-headline font-light" translate>
+    {{ editMode ? "EDITING_SONG" : "ADD_NEW_SONG" }}
+  </h3>
   <button
     class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
-    (click)="return()"
+    (click)="onCancel()"
   >
-    Cancelar
+    <span translate>CANCEL</span>
   </button>
 </div>
+
 <div class="flex flex-col p-4 bg-background">
-  <!-- Formulario -->
   <form class="space-y-4" [formGroup]="form" (ngSubmit)="onSubmit()">
     <!-- Título -->
     <div>
-      <label for="title" class="block text-sm font-medium text-gray-700"
-        >Título</label
+      <label
+        for="title"
+        class="block text-sm font-medium text-gray-700"
+        translate
+        >TITLE</label
       >
       <input
+        formControlName="title"
         type="text"
         id="title"
-        name="title"
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
-        placeholder="Indique el título de la canción"
+        placeholder="{{ 'ENTER_SONG_TITLE' | translate }}"
       />
     </div>
 
     <!-- Artistas -->
-    <div>
-      <label for="artist" class="block text-sm font-medium text-gray-700">Artista</label>
-      <select formControlName="artist" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
-        <option *ngFor="let artist of artists$ | async" [value]="artist.id">{{ artist.name }}</option>
-      </select>
-    </div>
+    <div class="relative">
+      <label class="block text-sm font-medium text-gray-700" translate
+        >ARTIST</label
+      >
+      <input
+        type="text"
+        readonly
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 cursor-pointer"
+        placeholder="Seleccionar artista(s)"
+        (click)="toggleArtistDropdown()"
+      />
 
-    <div>
-      <label class="block text-sm font-medium text-gray-700">Género</label>
-      <div class="flex flex-wrap gap-2 mt-2">
-        <ng-container *ngFor="let genreControl of genres.controls; let i = index">
-          <span class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center">
-            {{ genreControl.value }}
-            <button type="button" class="ml-2 text-white" (click)="removeGenre(i)">✕</button>
-          </span>
-        </ng-container>
+      <div
+        *ngIf="showArtistDropdown"
+        class="absolute mt-1 w-full rounded-md border border-gray-300 bg-white shadow-lg z-10"
+      >
+        <div class="flex flex-wrap gap-2 p-2">
+          <ng-container *ngFor="let artist of artists$ | async">
+            <div
+              *ngIf="!selectedArtists.includes(artist.id)"
+              class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center cursor-pointer"
+              (click)="addSelectedArtist(artist.id)"
+            >
+              {{ artist.name }}
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-4 w-4 ml-2"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M5 11l7-7 7 7M5 19l7-7 7 7"
+                />
+              </svg>
+            </div>
+          </ng-container>
+        </div>
       </div>
-      <input type="text" (keydown.enter)="addGenre($event)" placeholder="Añade un género" class="mt-1 block rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
     </div>
 
-    <!-- Compañía discográfica -->
-    <div>
-      <label for="company" class="block text-sm font-medium text-gray-700">Compañía Discográfica</label>
-      <select formControlName="company" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
-        <option *ngFor="let company of companies$ | async" [value]="company.id">{{ company.name }}</option>
-      </select>
+    <!-- Artistas seleccionados -->
+    <div *ngIf="selectedArtists.length > 0" class="mt-4">
+      <label class="block text-sm font-medium text-gray-700" translate>SELECTED_ARTISTS</label>
+      <div class="flex flex-wrap gap-2">
+        <span *ngFor="let selectedArtistId of selectedArtists" class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center">
+          {{ getArtistName(selectedArtistId) | async }}
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" (click)="removeSelectedArtist(selectedArtistId)">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </span>
+      </div>
     </div>
 
-    <!-- País -->
-    <div>
-      <label for="country" class="block text-sm font-medium text-gray-700">País</label>
-      <select formControlName="country" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
-        <!-- Opciones de países aquí -->
-      </select>
+    <!-- Género -->
+    <div class="relative">
+      <label class="block text-sm font-medium text-gray-700" translate
+        >GENRE</label
+      >
+      <input
+        type="text"
+        readonly
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 cursor-pointer"
+        placeholder="Seleccionar género"
+        (click)="toggleGenreDropdown()"
+      />
+
+      <div
+        *ngIf="showGenreDropdown"
+        class="absolute mt-1 w-full rounded-md border border-gray-300 bg-white shadow-lg z-10"
+      >
+        <div class="flex flex-wrap gap-2 p-2">
+          <ng-container *ngFor="let genre of availableGenres">
+            <div
+              *ngIf="!selectedGenres.includes(genre)"
+              class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center cursor-pointer"
+              (click)="addSelectedGenre(genre)"
+            >
+              {{ genre }}
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-4 w-4 ml-2"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M5 11l7-7 7 7M5 19l7-7 7 7"
+                />
+              </svg>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+    </div>
+
+    <!-- Generos seleccionados -->
+    <div *ngIf="selectedGenres.length > 0" class="mt-4">
+      <label class="block text-sm font-medium text-gray-700" translate
+        >SELECTED_GENRES</label
+      >
+      <div class="flex flex-wrap gap-2 mt-1">
+        <span
+          *ngFor="let selectedGenre of selectedGenres"
+          class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center"
+        >
+          {{ selectedGenre }}
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4 ml-2 cursor-pointer"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            (click)="removeSelectedGenre(selectedGenre)"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12"
+            />
+          </svg>
+        </span>
+      </div>
     </div>
 
     <!-- Año -->
     <div>
-      <label for="year" class="block text-sm font-medium text-gray-700"
-        >Año</label
+      <label
+        for="year"
+        class="block text-sm font-medium text-gray-700"
+        translate
+        >YEAR</label
       >
       <input
+        formControlName="year"
         type="number"
         id="year"
-        name="year"
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
-        placeholder="Indique el año"
+        placeholder="{{ 'ENTER_YEAR' | translate }}"
       />
     </div>
 
     <!-- Puntuación -->
     <div>
-      <label for="rating" class="block text-sm font-medium text-gray-700"
-        >Puntuación</label
+      <label
+        for="rating"
+        class="block text-sm font-medium text-gray-700"
+        translate
+        >RATING</label
       >
       <input
+        formControlName="rating"
         type="number"
         id="rating"
-        name="rating"
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
-        placeholder="Indique la puntuación"
+        placeholder="{{ 'ENTER_RATING' | translate }}"
+      />
+    </div>
+
+    <!-- Campo de URL de imagen -->
+    <div>
+      <label
+        for="poster"
+        class="block text-sm font-medium text-gray-700"
+        translate
+        >IMAGE_URL</label
+      >
+      <input
+        formControlName="poster"
+        type="text"
+        id="poster"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+        placeholder="{{ 'ENTER_IMAGE_URL' | translate }}"
       />
     </div>
 
     <!-- Botón de envío -->
-    <div class="flex justify-end">
-      <button type="submit" class="py-2 px-4 bg-primary text-white rounded-full shadow-lg hover:bg-primary-dark">
-        Guardar
+    <div class="flex justify-end mt-4">
+      <button
+        type="submit"
+        class="mt-4 w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary"
+      >
+        {{ "ADD_SONG" | translate }}
       </button>
     </div>
   </form>
