--- a/src/app/songs/pages/list-page/list-page.component.html
+++ b/src/app/songs/pages/list-page/list-page.component.html
@@ -1,8 +1,8 @@
 <shared-loader *ngIf="loading$ | async"></shared-loader>
 
-<div class="bg-dark bg-opacity-10 min-h-screen p-5">
+<div class="min-h-screen p-5">
   <div class="flex justify-between items-center mb-6">
-    <h3 class="text-headline text-white font-light">Canciones</h3>
+    <h3 class="text-headline text-dark font-light">Canciones</h3>
     <button
       class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
       (click)="navigateToAdd()"
@@ -33,8 +33,8 @@
             </h3>
             <!-- Géneros visibles en móvil y tablet -->
             <div class="text-secondary mt-2 md:hidden">
-              <span *ngFor="let genre of song.genre; let i = index">
-                #{{ genre }}<span *ngIf="i < song.genre.length - 1">, </span>
+              <span *ngFor="let genre of song.genres; let i = index">
+                #{{ genre }}<span *ngIf="i < song.genres.length - 1">, </span>
               </span>
             </div>
             <!-- Resto de la información visible en escritorio -->
