feat: Added actions, effects, selectors, and UI component for modal functionality in Angular app.
Configure service loader for set on the store and add option delete modal (finish the configuration)

--- a/src/app/songs/pages/list-page/list-page.component.html
+++ b/src/app/songs/pages/list-page/list-page.component.html
@@ -1,21 +1,46 @@
 <shared-loader *ngIf="loading$ | async"></shared-loader>
 
-<div class="min-h-screen p-5">
+<div class="min-h-screen p-5 relative">
+  <!-- Encabezado -->
   <div class="flex justify-between items-center mb-6">
     <h3 class="text-headline text-dark font-light">Canciones</h3>
     <button
-      class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
-      (click)="navigateToAdd()"
-    >
-      Añadir canción
-    </button>
+  class="bg-primary p-4 text-dark rounded-full fixed bottom-5 right-5 shadow-md hover:bg-primary-dark transition duration-300 md:hidden z-10"
+  (click)="navigateToAdd()"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    class="h-6 w-6 "
+    fill="none"
+    viewBox="0 0 24 24"
+    stroke="currentColor"
+  >
+    <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      stroke-width="2"
+      d="M12 6v6m0 0v6m0-6h6m-6 0H6"
+    ></path>
+  </svg>
+</button>
+
+
   </div>
+
   <!-- Lista de tarjetas -->
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     <ng-container *ngIf="songs$ | async as songs">
       <div *ngFor="let song of songs" (click)="navigateToDetails(song.id)">
         <!-- Tarjeta con imagen de fondo -->
-        <div class="relative rounded-lg shadow-md overflow-hidden h-56">
+        <div
+          class="relative rounded-lg shadow-md overflow-hidden h-56 cursor-pointer"
+        >
+          <!-- Título de la canción (siempre visible) -->
+          <div class="absolute top-0 left-0 p-4 z-10">
+            <h3 class="text-white font-bold text-lg break-words">
+              {{ song.title }}
+            </h3>
+          </div>
           <!-- Imagen de fondo -->
           <div
             class="absolute inset-0 bg-cover bg-center"
@@ -27,23 +52,17 @@
           ></div>
           <!-- Contenido de la tarjeta -->
           <div class="absolute bottom-0 p-4 w-full">
-            <!-- Título de la canción -->
-            <h3 class="text-white font-bold text-lg truncate">
-              {{ song.title }}
-            </h3>
-            <!-- Géneros visibles en móvil y tablet -->
-            <div class="text-secondary mt-2 md:hidden">
-              <span *ngFor="let genre of song.genres; let i = index">
-                #{{ genre }}<span *ngIf="i < song.genres.length - 1">, </span>
+            <!-- Géneros -->
+            <div class="text-secondary mt-2">
+              <span *ngFor="let genre of song.genre; let i = index">
+                #{{ genre }}<span *ngIf="i < song.genre.length - 1">, </span>
               </span>
             </div>
-            <!-- Resto de la información visible en escritorio -->
+            <!-- Información adicional -->
             <div class="hidden lg:flex justify-between items-center mt-4">
               <span class="text-info text-white">{{ song.year }}</span>
               <span class="text-info text-white">{{ song.duration }}s</span>
-              <span class="text-success text-white"
-                >Rating: {{ song.rating }}</span
-              >
+              <shared-rating [rating]="song.rating"></shared-rating>
             </div>
           </div>
         </div>
