--- a/src/app/shared/components/loader/loader.component.css
+++ b/src/app/shared/components/loader/loader.component.css
@@ -5,17 +5,61 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  backdrop-filter: blur(5px); /* Desenfocado del fondo */
+  background-color: black;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.loading {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  background-color: white;
+  margin: 10px;
+  border-radius: 0%;
+  animation-duration: 4s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-name: loadingAnimation;
 }
 
-.loader {
-  font-size: 4rem; /* Tamaño grande para la letra */
-  color: #8c67ef; /* Color azul claro basado en tu tema */
-  font-weight: normal;
-  animation: spin 2s linear infinite;
+@keyframes loadingAnimation {
+  0% {
+    border-radius: 50% 50% 50% 50%;
+    transform: rotate(0deg);
+  }
+
+  12.5% {
+    border-radius: 0% 50% 50% 50%;
+  }
+
+  25% {
+    border-radius: 0% 0% 50% 50%;
+    transform: rotate(90deg);
+  }
+
+  37.5% {
+    border-radius: 0% 0% 0% 50%;
+  }
+
+  50% {
+    border-radius: 0% 0% 0% 0%;
+    transform: rotate(180deg);
+  }
+
+  62.5% {
+    border-radius: 50% 0% 0% 0%;
+  }
+
+  75% {
+    border-radius: 50% 50% 0% 0%;
+    transform: rotate(270deg);
+  }
+
+  87.5% {
+    border-radius: 50% 50% 50% 0%;
+  }
+
+  100% {
+    border-radius: 50% 50% 50% 50%;
+    transform: rotate(360deg);
+  }
 }
