--- a/src/app/shared/layout-page/layout-page.component.html
+++ b/src/app/shared/layout-page/layout-page.component.html
@@ -1,20 +1,37 @@
 <div class="flex flex-col min-h-screen bg-background">
   <!-- Cabecera -->
-  <div class="flex items-center justify-between p-4 bg-dark lg:px-16 border-b-2 border-dark">
-    <div class="flex items-center ">
+  <div class="flex items-center justify-between p-4 bg-dark lg:px-16">
+    <div class="flex items-center">
       <button class="text-white mr-3" (click)="toggleSidebar()">
-        <svg class="h-10 w-10" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+        <svg
+          class="h-10 w-10"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 6h16M4 12h16m-7 6h7"
+          />
         </svg>
       </button>
-      <h3 class="text-headline text-white font-light ">
-        SEQUENCE MUSIC
-      </h3>
+      <img
+        src="assets/images/logo.png"
+        alt="Sequence Music Logo"
+        class="h-10 w-auto"
+      />
+      <h3 class="text-primary mt-1 ml-2 hidden lg:block">| MUSIC</h3>
     </div>
   </div>
 
   <!-- Sidebar -->
-  <div class="fixed inset-y-0 left-0 w-80 bg-white transform transition-transform duration-300 ease-in-out z-20" [ngClass]="showSidebar ? 'translate-x-0' : '-translate-x-full'">
+  <div
+    class="fixed inset-y-0 left-0 w-80 bg-white transform transition-transform duration-300 ease-in-out z-20"
+    [ngClass]="showSidebar ? 'translate-x-0' : '-translate-x-full'"
+  >
     <shared-sidebar (close)="toggleSidebar()"></shared-sidebar>
   </div>
 
