--- a/src/app/songs/pages/detail-page/detail-page.component.html
+++ b/src/app/songs/pages/detail-page/detail-page.component.html
@@ -1,8 +1,9 @@
 <shared-loader *ngIf="loading$ | async"></shared-loader>
 
-<div class="min-h-screen p-5">
-  <div class="flex justify-between items-center mb-6">
-    <h3 class="text-headline text-dark font-light">Detalles de la Canción</h3>
+<div class="min-h-screen p-4 md:p-8 bg-background">
+  <!-- Encabezado -->
+  <div class="flex justify-between items-center mb-6 text-primary-dark">
+    <h2 class="text-xl md:text-2xl font-semibold">Detalles de la Canción</h2>
     <button
       class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
       (click)="navigateBack()"
@@ -13,40 +14,41 @@
 
   <ng-container *ngIf="song$ | async as song">
     <!-- Detalle de la canción -->
-    <div class="flex flex-col md:flex-row">
+    <div class="bg-white rounded-lg shadow overflow-hidden md:flex">
       <!-- Imagen de la canción -->
-      <div class="md:w-1/2 mb-4 md:mb-0">
+      <div class="md:flex-shrink-0">
         <img
           [src]="song.poster"
           alt="{{ song.title }}"
-          class="w-full h-auto rounded-lg shadow-md"
+          class="object-cover md:w-48 lg:w-64 h-48 lg:h-64 w-full"
         />
       </div>
 
       <!-- Información de la canción -->
-      <div class="md:w-1/2 md:pl-6">
-        <h3 class="text-headline text-dark font-bold mb-4">{{ song.title }}</h3>
-        <div class="text-secondary mb-4">
-          <span *ngFor="let genre of song.genres; let i = index">
-            #{{ genre }}<span *ngIf="i < song.genres.length - 1">, </span>
+      <div class="p-4">
+        <h3 class="text-2xl font-bold mb-2">{{ song.title }}</h3>
+        <p class="text-sm text-gray-600 mb-4">
+          <span class="font-medium">Géneros:</span>
+          <span *ngFor="let genre of song.genre; let i = index">
+            {{ genre }}<span *ngIf="i < song.genre.length - 1">, </span>
           </span>
-        </div>
-        <div class="text-info mb-2">Año: {{ song.year }}</div>
-        <div class="text-info mb-2">Duración: {{ song.duration }}s</div>
-        <div class="text-success mb-4">Rating: {{ song.rating }}</div>
+        </p>
+        <p class="text-sm text-gray-600 mb-2">Año: {{ song.year }}</p>
+        <p class="text-sm text-gray-600 mb-2">Duración: {{ song.duration }}s</p>
+        <shared-rating class="mb-4" [rating]="song.rating"></shared-rating>
 
         <!-- Botones de acción -->
         <div class="flex gap-4">
           <button
-            class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
+            class="bg-primary text-white py-2 px-4 rounded-full hover:bg-primary-dark transition duration-300"
             (click)="navigateToEdit(song.id)"
           >
             Editar
           </button>
           <button
-  class="bg-danger text-white py-2 px-4 rounded hover:bg-danger-dark transition duration-300"
-  (click)="deleteSongConfirm(song.id)"
->
+            class="bg-danger text-dark py-2 px-4 rounded-full hover:bg-danger-dark transition duration-300 border border-danger-dark"
+            (click)="deleteSongConfirm(song.id)"
+          >
             Eliminar
           </button>
         </div>
