--- a/src/app/songs/pages/form-page/form-page.component.html
+++ b/src/app/songs/pages/form-page/form-page.component.html
@@ -1,16 +1,17 @@
+<shared-loader *ngIf="loading$ | async"></shared-loader>
 <div class="flex justify-between items-center pl-4 pr-4">
   <h3 class="text-headline font-light" translate>
     {{ editMode ? "EDITING_SONG" : "ADD_NEW_SONG" }}
   </h3>
   <button
-    class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
+    class="bg-primary text-dark py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
     (click)="onCancel()"
   >
     <span translate>CANCEL</span>
   </button>
 </div>
 
-<div class="flex flex-col p-4 bg-background">
+<div class="flex flex-col p-4 bg-background sm:bg-white">
   <form class="space-y-4" [formGroup]="form" (ngSubmit)="onSubmit()">
     <!-- Título -->
     <div>
@@ -24,7 +25,7 @@
         formControlName="title"
         type="text"
         id="title"
-        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 cursor-pointer"
         placeholder="{{ 'ENTER_SONG_TITLE' | translate }}"
       />
     </div>
@@ -41,7 +42,21 @@
         placeholder="Seleccionar artista(s)"
         (click)="toggleArtistDropdown()"
       />
-
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6 text-black text-opacity-50 absolute right-2 top-9 cursor-pointer"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+        (click)="toggleArtistDropdown()"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M12 4v16m8-8H4"
+        />
+      </svg>
       <div
         *ngIf="showArtistDropdown"
         class="absolute mt-1 w-full rounded-md border border-gray-300 bg-white shadow-lg z-10"
@@ -50,7 +65,7 @@
           <ng-container *ngFor="let artist of artists$ | async">
             <div
               *ngIf="!selectedArtists.includes(artist.id)"
-              class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center cursor-pointer"
+              class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center cursor-pointer"
               (click)="addSelectedArtist(artist.id)"
             >
               {{ artist.name }}
@@ -76,12 +91,29 @@
 
     <!-- Artistas seleccionados -->
     <div *ngIf="selectedArtists.length > 0" class="mt-4">
-      <label class="block text-sm font-medium text-gray-700" translate>SELECTED_ARTISTS</label>
-      <div class="flex flex-wrap gap-2">
-        <span *ngFor="let selectedArtistId of selectedArtists" class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center">
+      <label class="block text-sm font-medium text-gray-700" translate
+        >SELECTED_ARTISTS</label
+      >
+      <div class="flex flex-wrap gap-2 mt-2">
+        <span
+          *ngFor="let selectedArtistId of selectedArtists"
+          class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center"
+        >
           {{ getArtistName(selectedArtistId) | async }}
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" (click)="removeSelectedArtist(selectedArtistId)">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4 ml-2 cursor-pointer"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            (click)="removeSelectedArtist(selectedArtistId)"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12"
+            />
           </svg>
         </span>
       </div>
@@ -108,7 +140,7 @@
           <ng-container *ngFor="let genre of availableGenres">
             <div
               *ngIf="!selectedGenres.includes(genre)"
-              class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center cursor-pointer"
+              class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center cursor-pointer"
               (click)="addSelectedGenre(genre)"
             >
               {{ genre }}
@@ -140,7 +172,7 @@
       <div class="flex flex-wrap gap-2 mt-1">
         <span
           *ngFor="let selectedGenre of selectedGenres"
-          class="bg-primary px-3 py-1 rounded-full text-white text-xs flex items-center"
+          class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center"
         >
           {{ selectedGenre }}
           <svg
@@ -217,7 +249,7 @@
     <div class="flex justify-end mt-4">
       <button
         type="submit"
-        class="mt-4 w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary"
+        class="mt-4 w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-dark bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary"
       >
         {{ "ADD_SONG" | translate }}
       </button>
