--- a/src/app/shared/components/loader/loader.component.css
+++ b/src/app/shared/components/loader/loader.component.css
@@ -1,65 +1,28 @@
-/* Estilos para el loader */
-.loader-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  background-color: black;
+.Buttons {
+  color: #66ffcc;
+  width: 6px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  animation: l37-1 0.75s infinite linear alternate, l37-2 1.5s infinite linear;
 }
-
-.loading {
-  width: 50px;
-  height: 50px;
-  display: inline-block;
-  background-color: white;
-  margin: 10px;
-  border-radius: 0%;
-  animation-duration: 4s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-name: loadingAnimation;
-}
-
-@keyframes loadingAnimation {
-  0% {
-    border-radius: 50% 50% 50% 50%;
-    transform: rotate(0deg);
+@keyframes l37-1 {
+  0%,
+  20% {
+    box-shadow: 30px 0 0 3px, 10px 0 0 3px, -10px 0 0 3px, -30px 0 0 3px;
   }
-
-  12.5% {
-    border-radius: 0% 50% 50% 50%;
-  }
-
-  25% {
-    border-radius: 0% 0% 50% 50%;
-    transform: rotate(90deg);
-  }
-
-  37.5% {
-    border-radius: 0% 0% 0% 50%;
-  }
-
-  50% {
-    border-radius: 0% 0% 0% 0%;
-    transform: rotate(180deg);
-  }
-
-  62.5% {
-    border-radius: 50% 0% 0% 0%;
-  }
-
-  75% {
-    border-radius: 50% 50% 0% 0%;
-    transform: rotate(270deg);
-  }
-
-  87.5% {
-    border-radius: 50% 50% 50% 0%;
-  }
-
+  60%,
   100% {
-    border-radius: 50% 50% 50% 50%;
-    transform: rotate(360deg);
+    box-shadow: 12px 0 0 3px, 14px 0 0 6px, -14px 0 0 6px, -12px 0 0 3px;
+  }
+}
+
+@keyframes l37-2 {
+  0%,
+  25% {
+    transform: rotate(0);
+  }
+  50%,
+  100% {
+    transform: rotate(0.5turn);
   }
 }
