--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,4 @@
-<div class="loader-container">
-  <span class="loading"></span>
+<div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-50">
+  <div class="Buttons">
+  </div>
 </div>
