--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-50">
+<div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-dark bg-opacity-90 z-50">
   <div class="Buttons">
   </div>
 </div>
