--- a/src/app/songs/pages/form-page/form-page.component.html
+++ b/src/app/songs/pages/form-page/form-page.component.html
@@ -194,6 +194,29 @@
       </div>
     </div>
 
+    <!-- País -->
+<div>
+  <label
+    for="country"
+    class="block text-sm font-medium text-gray-700"
+    translate
+  >COUNTRY</label>
+  <select
+    formControlName="country"
+    aria-placeholder="Seleccione un país"
+    id="country"
+    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
+    <option value="" translate>SELECT_COUNTRY</option>
+    <option
+      *ngFor="let country of countries"
+      [value]="country"
+      translate
+    >
+      {{ country | translate }}
+    </option>
+  </select>
+</div>
+
     <!-- Año -->
     <div>
       <label
@@ -228,6 +251,23 @@
       />
     </div>
 
+    <!-- duration -->
+    <div>
+      <label
+        for="duration"
+        class="block text-sm font-medium text-gray-700"
+        translate
+        >DURATION</label
+      >
+      <input
+        formControlName="duration"
+        type="number"
+        id="duration"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
+        placeholder="{{ 'ADD_DURATION' | translate }}"
+      />
+    </div>
+
     <!-- Campo de URL de imagen -->
     <div>
       <label
@@ -246,13 +286,11 @@
     </div>
 
     <!-- Botón de envío -->
-    <div class="flex justify-end mt-4">
       <button
         type="submit"
-        class="mt-4 w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-dark bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary"
+        class="bg-primary text-dark py-2 px-4"
       >
         {{ "ADD_SONG" | translate }}
       </button>
-    </div>
   </form>
 </div>
