fix: funcionamiento entre paginas correcto y campo country segun mockup opcional

--- a/src/app/songs/pages/detail-page/detail-page.component.html
+++ b/src/app/songs/pages/detail-page/detail-page.component.html
@@ -3,7 +3,7 @@
   <div class="flex justify-between items-center mb-6 text-primary-dark">
     <h2 class="text-xl md:text-2xl font-semibold">Detalles de la Canción</h2>
     <button
-      class="bg-primary text-white py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
+      class="bg-primary text-dark py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
       (click)="navigateBack()"
     >
       Volver
