--- a/src/app/songs/pages/form-page/form-page.component.html
+++ b/src/app/songs/pages/form-page/form-page.component.html
@@ -1,5 +1,6 @@
 <shared-loader *ngIf="loading$ | async"></shared-loader>
 <div class="flex justify-between items-center pl-4 pr-4">
+  <!-- Encabezado -->
   <h3 class="text-headline font-light" translate>
     {{ editMode ? "EDITING_SONG" : "ADD_NEW_SONG" }}
   </h3>
@@ -28,6 +29,12 @@
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 cursor-pointer"
         placeholder="{{ 'ENTER_SONG_TITLE' | translate }}"
       />
+      <div
+        *ngIf="form.get('title')?.invalid && form.get('title')?.touched"
+        class="text-red-600 text-sm"
+      >
+        {{ "TITLE_REQUIRED" | translate }}
+      </div>
     </div>
 
     <!-- Artistas -->
@@ -195,27 +202,37 @@
     </div>
 
     <!-- País -->
-<div>
-  <label
-    for="country"
-    class="block text-sm font-medium text-gray-700"
-    translate
-  >COUNTRY</label>
-  <select
-    formControlName="country"
-    aria-placeholder="Seleccione un país"
-    id="country"
-    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50">
-    <option value="" translate>SELECT_COUNTRY</option>
-    <option
-      *ngFor="let country of countries"
-      [value]="country"
-      translate
-    >
-      {{ country | translate }}
-    </option>
-  </select>
-</div>
+    <div class="relative">
+      <label
+        for="country"
+        class="block text-sm font-medium text-gray-700"
+        translate
+        >COUNTRY</label
+      >
+      <div
+        class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus-within:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 cursor-pointer relative"
+        (click)="toggleDropdown()"
+      >
+        <div class="pl-3 pr-10 py-2 bg-white text-gray-700">
+          {{ selectCountry || ('SELECT_COUNTRY' | translate) }}
+        </div>
+        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+          <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+            <path d="M5.5 7l5 5 5-5H5.5z" />
+          </svg>
+        </div>
+        <div *ngIf="showDropdown" class="absolute z-10 w-full bg-white rounded-md shadow-lg mt-1 max-h-60 overflow-auto">
+          <a *ngFor="let country of countries" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" (click)="selectCountry(country)">{{ country | translate }}</a>
+        </div>
+      </div>
+      <div
+        *ngIf="form.get('country')?.invalid && form.get('country')?.touched"
+        class="text-red-600 text-sm"
+      >
+        {{ "COUNTRY_REQUIRED" | translate }}
+      </div>
+    </div>
+
 
     <!-- Año -->
     <div>
@@ -286,11 +303,10 @@
     </div>
 
     <!-- Botón de envío -->
-      <button
-        type="submit"
-        class="bg-primary text-dark py-2 px-4"
-      >
+    <div class="flex justify-end mt-4">
+      <button type="submit" class="bg-primary text-dark py-2 px-4">
         {{ "ADD_SONG" | translate }}
       </button>
+    </div>
   </form>
 </div>
